Correct ANSI string terminator

Use the correct decimal value 27

In bash, PS1="\e]0;<title>\e\\" or PS1="\e]0;<title>\033"

BUG: 231405

Differential Revision: https://phabricator.kde.org/D5576

(cherry picked from commit 7a41b73b46d1f774e82eb64a8b66920e411ccd3c)